@startuml
title SO DO LOP 3 TANG - QUAN LY TAI SAN (UC 1.4.30)
top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #FFFACD
  BorderColor #9B7B7B
}

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHQuanLyTaiSan #BFE8BA {
    - txtTimKiem: TextBox
    - cboLoaiTaiSan: ComboBox
    - cboTrangThai: ComboBox
    - tblTaiSan: Table
    - dlgTaiSan: Dialog
    - txtMaTaiSan: TextBox
    - txtTenTaiSan: TextBox
    - txtDonViTinh: TextBox
    - txtGiaTri: TextBox
    - txtMoTa: TextArea
    - lstTrangThaiTaiSan: ListBox
    - btnThemTaiSan: Button
    - btnSuaTaiSan: Button
    - btnXoaTaiSan: Button
    - dlgXacNhanXoa: AlertDialog
    --
    + taiDanhSachTaiSan()
    + luuTaiSan(taiSan: TaiSan)
    + xacNhanXoa()
  }
}
package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class QuanLyTaiSan #F4E3A2 {
    + LayDanhSach(): List<TaiSan>
    + Them(taiSan: TaiSan): TaiSan
    + CapNhat(maTS: String, thongTin: TaiSan): TaiSan
    + Xoa(maTS: String)
  }
  class TaiSan #F4E3A2 {
    - MaTS: String
    - TenTaiSan: String
    - LoaiTaiSan: String
    - GiaTri: Decimal
    - MoTa: String
    - TrangThai: String
    + ChuanHoa()
    + KiemTraDuLieuHopLe()
    + LayDanhSach(): List<TaiSan>
    + Doc(maTS: String): TaiSan
    + TrungTen(tenTaiSan: String, maLoaiTru: String): Boolean
    + DangDuocThamChieu(maTS: String): Boolean
    + Them()
    + CapNhat()
    + Xoa()
  }
}
package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class TaiSanDB #BFDCF0 {
    + LayDanhSach(): List<TaiSan>
    + Doc(maTS: String): TaiSan
    + TrungTen(tenTaiSan: String, maLoaiTru: String): Boolean
    + DangDuocThamChieu(maTS: String): Boolean
    + Them(taiSan: TaiSan)
    + CapNhat(taiSan: TaiSan)
    + Xoa(maTS: String)
  }
}
MHQuanLyTaiSan o-- QuanLyTaiSan
QuanLyTaiSan o-- TaiSan
TaiSan o-- TaiSanDB

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
QuanLyTaiSan -[hidden]down- TaiSanDB
@enduml
